feat(Behavior): Add behavior to Entity and to Scene
- update the README's screenshot and add `Behavior to the `/docs`